# imse

./: .gitignore  data.dvc  pix2map.bat  readme.md  zizu_plan.md
.devcontainer/: devcontainer.json
.dvc/: config
src/: Dockerfile  app.py  pyproject.toml
src/imse/: basicfinder.py  metaextractor.py  utils.py
src/imse/tools/: cli.py
tests/: test_utils.py
