[tool.poetry]
name = "imse"
version = "0.1.0"
description = "Light weight image search tool."
authors = ["benjamindev <benjamin.decharmoy@gmail.com>"]

packages = [
    {include = "imse"}
]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.1"
torchvision = "^0.6.1"
streamlit = "^0.62.1"
scipy = "^1.5.1"
loguru = "^0.5.1"
faiss-gpu = "^1.6.3"
dvc = {extras = ["s3"], version = "^1.1.10"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
